# markov

./: .gitignore  README.md  main.py  make_dictionary.py  pyproject.toml  test.py  tweet.py
